Koan CHANGELOG

* Thu Jan 31 2008 Michael DeHaan <mdehaan@redhat.com> - 0.6.5-1
- Added --no-cobbler option so --replace-self is usable without cobbler servers

* Thu Jan 10 2008 Michael DeHaan <mdehaan@redhat.com> - 0.6.4-1
- Added --nogfx option, which is basically the inverse of the old --virt-graphics
- Allow Xen machines to be constructed with no disks (size=0), but not qemu/KVM
- Support Xen Fullvirt via PXE
- Add new --autonet command
- Fail if kernel argument length exceeds the 255 cap, as truncation can lead to hard to debug errors.

* Thu Nov 15 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.3-3
- Packaged textwrap for RHEL3 compatibility, plus RHEL3 xmlrpclib tweak

* Tue Nov 07 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.3-2
- Multiple NIC support
- Added traceback print to detect bridge connection problems, if any
- Use --virt-cpu setting from Cobbler
- Misc bugfixing

* Fri Sep 28 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.2-2
- Allow for multiple values (comma seperated) to --virt-path
- Allow for multiple virt file sizes
- Refactoring around the virt bits
- Remove legacy sys.path hack as enchant has been removed (just use SSH)
- Try port 80 proxied XMLRPC by default (first) before trying 25151 

* Thu Aug 30 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.1-1
- Bridged networking control options (--virt-bridge)
- avahi support (--server=DISCOVER)
- do not allow autodetection of mac with --virt
- allow "xen" as alias for "xenpv" for --virt-type 
- correct arch name when passing to qemu hypervisor 
- don't complain when using default vcpu setting

* Thu Aug 09 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.0-1
- stable release
- don't check for libvirtd running if doesn't exist

* Thu Jul 26 2007 Michael DeHaan <mdehaan@redhat.com> - 0.5.2-1
- added XMLRPC version checking with cobbler server

* Fri Jul 20 2007 Michael DeHaan <mdehaan@redhat.com> - 0.5.1-1
- added qemu/kvm with --virt-type
- --virt-path support