@@ -1,7 +1,8 @@
 Koan CHANGELOG
 
-* Thu Jan 31 2008 Michael DeHaan <mdehaan@redhat.com> - 0.6.5-1
+* Fri Feb 08 2008 Michael DeHaan <mdehaan@redhat.com> - 0.6.5-1
 - Added --no-cobbler option so --replace-self is usable without cobbler servers
+- ia64 fix for --replace-self
 
 * Thu Jan 10 2008 Michael DeHaan <mdehaan@redhat.com> - 0.6.4-1
 - Added --nogfx option, which is basically the inverse of the old --virt-graphics
